--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,12 @@ spring:
     driver-class-name: org.h2.Driver #드라이버 클래스를 설정 합니다.
     username: sa #사용자 ID를 지정
     password: '' #DB 비밀번호 여기서는 빈 문자열로 설정
+  sql:
+    init:
+      schema-locations:
+      - classpath:db/table.sql
+      data-locations:
+      - classpath:db/data.sql
   
   h2:
     console:
