--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,11 @@ spring:
     view: 
       prefix: /WEB-INF/view/ #JSP파일이 위치한 디렉토리 접두사를 설정합니다.
       suffix: .jsp #뷰 이름에 자동으로 추가될 파일 확장자를 설정합니다.
+  servlet:
+    multipart:
+      max-file-size: 20MB #파일 최대 크기 20MB
+      max-request-size: 20MB #멀티파트전체 요청크기 20제한
+        
   datasource:
     url: jdbc:mysql://localhost:3306/mybank?serverTimezone=Asia/Seoul  #데이터 베이스 연결을 위한 URL을 설정 합니다.
     driver-class-name: com.mysql.cj.jdbc.Driver #드라이버 클래스를 설정 합니다.
